Added Google Passport

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -18,9 +18,9 @@
     <form action="./login-facebook" method="POST">
         <div class="loginDiv"><button><img src="../images/facebookLoginBtn.png"></button></div>
     </form><br/>
-    <form action="./login" method="POST">
-    <div class="loginDiv"><img src="../images/googleLoginBtn.png"></div>
-    </form><br/>
+    <form action="./login-google" method="POST">
+        <div class="loginDiv"><button><img src="../images/googleLoginBtn.png"></button></div>
+    </form><br/><br/>
 </div>
 
 <script>
